[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ens-load-forecast"
authors = [
    {name = "Erwan Nisol", email = "erwan.nisol@free.fr"},
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

[tool.setuptools]
packages = ["ens_load_forecast"]

[tool.ruff]
select = ["D", "E", "F", "I", "N", "W"]
ignore = [
    "N999",  # Invalid module name (caused by cookiecutter syntax)
    "D203",  # Incompatible with D211
    "D213"  # Incompatible with D212
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]
