[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ens-load-forecast"
authors = [
    {name = "Erwan Nisol", email = "erwan.nisol@free.fr"},
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "ipykernel==6.27.1",
    "ipython==8.18.1",
    "nbformat==5.9.2",
    "joblib==1.3.2",
    "geopandas==0.14.1",
    "numpy==1.26.2",
    "plotly==5.18.0",
    "pandas==2.1.3",
    "scikit-learn==1.3.2",
    "scipy==1.11.4",
]

[tool.setuptools]
packages = ["ens_load_forecast"]

[tool.ruff]
select = ["D", "E", "F", "I", "N", "W"]
ignore = [
    "N999",  # Invalid module name (caused by cookiecutter syntax)
    "D203",  # Incompatible with D211
    "D213"  # Incompatible with D212
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]
